tests/errors/index_non_integer_substring2.f90
program index_non_integer_substring2
    character(8) :: x
    x = "dothraki"
    print *, x(1:2.3)
end program
